--- a/MundoBalloonApi.web/Properties/launchSettings.json
+++ b/MundoBalloonApi.web/Properties/launchSettings.json
@@ -3,7 +3,11 @@
     "MundoBalloonApi.api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MUNDOB_DB_STR": "server=localhost;user=root;database=mundob-dev;password=Labs2013;TreatTinyAsBoolean=true;"
+      }
     }
   }
 }
