Initial query for products working with the service implementation

--- a/MundoBalloonApi.GraphQL/appsettings.json
+++ b/MundoBalloonApi.GraphQL/appsettings.json
@@ -5,5 +5,28 @@
     "ClientSecret": "T~B3_c_xTKta4pymN9c-pgRRBkAQ6~u_2p",
     "Domain": "interactivelabsad.onmicrosoft.com",
     "SignUpSignInPolicyId": "b2c_1_mundoBalloon-signup"
+  },
+  "EasyCaching": {
+    "redis": {
+      "MaxRdSecond": 120,
+      "EnableLogging": false,
+      "LockMs": 5000,
+      "SleepMs": 300,
+      "SerializerName": "json",
+      "DBConfig": {
+        "Password": null,
+        "IsSsl": false,
+        "SslHost": null,
+        "ConnectionTimeout": 5000,
+        "AllowAdmin": true,
+        "Endpoints": [
+          {
+            "Host": "127.0.0.1",
+            "Port": 6379
+          }
+        ],
+        "Database": 1
+      }
+    }
   }
 }
