--- a/MundoBalloonApi.GraphQL/Properties/launchSettings.json
+++ b/MundoBalloonApi.GraphQL/Properties/launchSettings.json
@@ -6,7 +6,7 @@
   "profiles": {
     "MundoBalloonApi.graphql": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
