--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -22,22 +22,26 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="EasyCaching.Redis" Version="1.2.1" />
     <PackageReference Include="EasyCaching.Serialization.Json" Version="1.2.0" />
-    <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="2.4.1" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="11.1.0" />
-    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.1.0" />
+    <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="2.5.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.2.2" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
     <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.1.0" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Identity.Web" Version="1.8.2" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.9.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MundoBalloonApi.business\MundoBalloonApi.business.csproj" />
     <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Types" />
   </ItemGroup>
 
 </Project>
