--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="EasyCaching.Serialization.Json" Version="1.2.0" />
     <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.0.0" />
     <PackageReference Include="FairyBread" Version="6.0.1" />
+    <PackageReference Include="FirebaseAdmin" Version="2.1.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.1.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.2.2" />
     <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.2.2" />
