--- a/MundoBalloonApi.business/MundoBalloonApi.business.csproj
+++ b/MundoBalloonApi.business/MundoBalloonApi.business.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="FirebaseAdmin" Version="2.1.0" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj" />
