--- a/MundoBalloonApi.infrastructure/MundoBalloonApi.infrastructure.csproj
+++ b/MundoBalloonApi.infrastructure/MundoBalloonApi.infrastructure.csproj
@@ -15,6 +15,7 @@
       <Folder Include="Data" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="FirebaseAdmin" Version="2.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
