--- a/MundoBalloonApi.test/MundoBalloonApi.test.csproj
+++ b/MundoBalloonApi.test/MundoBalloonApi.test.csproj
@@ -16,6 +16,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="10.1.1" />
+        <PackageReference Include="FirebaseAdmin" Version="2.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.6" />
