--- a/MundoBalloonApi.web/MundoBalloonApi.web.csproj
+++ b/MundoBalloonApi.web/MundoBalloonApi.web.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="EasyCaching.Redis" Version="1.2.1" />
     <PackageReference Include="EasyCaching.Serialization.Json" Version="1.2.0" />
     <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.0.0" />
+    <PackageReference Include="FirebaseAdmin" Version="2.1.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.10.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.4" />
