--- a/MundoBalloonApi.test/MundoBalloonApi.test.csproj
+++ b/MundoBalloonApi.test/MundoBalloonApi.test.csproj
@@ -33,8 +33,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\MundoBalloonApi.business\MundoBalloonApi.business.csproj" />
+        <ProjectReference Include="..\MundoBalloonApi.GraphQL\MundoBalloonApi.GraphQL.csproj" />
         <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj" />
-        <ProjectReference Include="..\MundoBalloonApi.web\MundoBalloonApi.web.csproj" />
     </ItemGroup>
 
 </Project>
