--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -26,11 +26,11 @@
     <PackageReference Include="FairyBread" Version="6.1.0" />
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.2.3" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.0" />
-    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.3.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.1" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.3.1" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
     <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.3.0" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -41,6 +41,10 @@
   <ItemGroup>
     <ProjectReference Include="..\MundoBalloonApi.business\MundoBalloonApi.business.csproj" />
     <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common" />
   </ItemGroup>
 
 </Project>
