--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -20,22 +20,23 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-    <PackageReference Include="EasyCaching.Redis" Version="1.4.0" />
-    <PackageReference Include="EasyCaching.Serialization.Json" Version="1.4.0" />
+    <PackageReference Include="EasyCaching.Redis" Version="1.4.1" />
+    <PackageReference Include="EasyCaching.Serialization.Json" Version="1.4.1" />
     <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.2.0" />
-    <PackageReference Include="FairyBread" Version="7.0.0" />
+    <PackageReference Include="FairyBread" Version="7.1.1" />
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.7" />
-    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="11.3.7" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.0.1" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
     <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.3.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
+    <PackageReference Include="HotChocolate.Data" Version="12.0.1" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Identity.Web" Version="1.16.1" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.18.0" />
   </ItemGroup>
 
   <ItemGroup>
