--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <LangVersion>9</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <LangVersion>default</LangVersion>
     <Nullable>enable</Nullable>
     <RootNamespace>MundoBalloonApi.graphql</RootNamespace>
   </PropertyGroup>
@@ -26,17 +26,17 @@
     <PackageReference Include="FairyBread" Version="8.0.0" />
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
-    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.0.1" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.1.0" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.1.0" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
     <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-    <PackageReference Include="HotChocolate.Data" Version="12.0.1" />
-    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
+    <PackageReference Include="HotChocolate.Data" Version="12.1.0" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Identity.Web" Version="1.19.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.20.0" />
   </ItemGroup>
 
   <ItemGroup>
