--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -5,6 +5,7 @@
     <LangVersion>default</LangVersion>
     <Nullable>enable</Nullable>
     <RootNamespace>MundoBalloonApi.graphql</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -22,16 +23,16 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="EasyCaching.Redis" Version="1.4.1" />
     <PackageReference Include="EasyCaching.Serialization.Json" Version="1.4.1" />
-    <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.2.0" />
+    <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.2.1" />
     <PackageReference Include="FairyBread" Version="8.0.0" />
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="12.1.0" />
-    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.1.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.2.1" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.2.1" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
     <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-    <PackageReference Include="HotChocolate.Data" Version="12.1.0" />
-    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.1.0" />
+    <PackageReference Include="HotChocolate.Data" Version="12.2.1" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
