--- a/MundoBalloonApi.test/MundoBalloonApi.test.csproj
+++ b/MundoBalloonApi.test/MundoBalloonApi.test.csproj
@@ -2,10 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-
         <IsPackable>false</IsPackable>
-
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
