--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <LangVersion>default</LangVersion>
+        <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <RootNamespace>MundoBalloonApi.graphql</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -19,34 +19,34 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="10.1.1" />
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-        <PackageReference Include="EasyCaching.Redis" Version="1.4.1" />
-        <PackageReference Include="EasyCaching.Serialization.Json" Version="1.4.1" />
-        <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.2.3" />
-        <PackageReference Include="FairyBread" Version="8.0.0" />
-        <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
-        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.5" />
-        <PackageReference Include="HotChocolate.AspNetCore" Version="12.3.2" />
-        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.3.2" />
-        <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
-        <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-        <PackageReference Include="HotChocolate.Data" Version="12.3.2" />
-        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.3.2" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
+        <PackageReference Include="AutoMapper" Version="10.1.1"/>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
+        <PackageReference Include="EasyCaching.Redis" Version="1.4.1"/>
+        <PackageReference Include="EasyCaching.Serialization.Json" Version="1.4.1"/>
+        <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.2.4"/>
+        <PackageReference Include="FairyBread" Version="8.0.0"/>
+        <PackageReference Include="FirebaseAdmin" Version="2.2.0"/>
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6"/>
+        <PackageReference Include="HotChocolate.AspNetCore" Version="12.4.1"/>
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.4.1"/>
+        <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5"/>
+        <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5"/>
+        <PackageReference Include="HotChocolate.Data" Version="12.4.1"/>
+        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.4.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Identity.Web" Version="1.21.0" />
+        <PackageReference Include="Microsoft.Identity.Web" Version="1.21.1"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\MundoBalloonApi.business\MundoBalloonApi.business.csproj" />
-        <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj" />
+        <ProjectReference Include="..\MundoBalloonApi.business\MundoBalloonApi.business.csproj"/>
+        <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Common" />
+        <Folder Include="Common"/>
     </ItemGroup>
 
 </Project>
