--- a/MundoBalloonApi.infrastructure/MundoBalloonApi.infrastructure.csproj
+++ b/MundoBalloonApi.infrastructure/MundoBalloonApi.infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <LangVersion>default</LangVersion>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <LangVersion>8.0</LangVersion>
@@ -17,12 +17,12 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="FirebaseAdmin" Version="2.2.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.1"/>
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0"/>
     </ItemGroup>
 </Project>
