Added code to add variation values and upload files to azure blob

--- a/MundoBalloonApi.GraphQL/appsettings.json
+++ b/MundoBalloonApi.GraphQL/appsettings.json
@@ -20,6 +20,12 @@
         ],
         "Database": 1
       }
+    },
+    "AzureStorageConfig": {
+      "AccountName": "",
+      "AccountKey": "",
+      "ImageContainer": "images",
+      "ThumbnailContainer": "thumbnails"
     }
   }
 }
