--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <RootNamespace>MundoBalloonApi.graphql</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>13504e94-294e-4591-9d5b-d70e81d1bf79</UserSecretsId>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,33 +20,33 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="11.0.1" />
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-        <PackageReference Include="EasyCaching.Redis" Version="1.5.1" />
-        <PackageReference Include="EasyCaching.Serialization.Json" Version="1.5.1" />
-        <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.4.0" />
-        <PackageReference Include="FirebaseAdmin" Version="2.3.0" />
-        <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
-        <PackageReference Include="HotChocolate.AspNetCore" Version="12.7.0" />
-        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.7.0" />
-        <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
-        <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-        <PackageReference Include="HotChocolate.Data" Version="12.7.0" />
-        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.7.0" />
+        <PackageReference Include="AutoMapper" Version="11.0.1"/>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
+        <PackageReference Include="EasyCaching.Redis" Version="1.5.1"/>
+        <PackageReference Include="EasyCaching.Serialization.Json" Version="1.5.1"/>
+        <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.4.0"/>
+        <PackageReference Include="FirebaseAdmin" Version="2.3.0"/>
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0"/>
+        <PackageReference Include="HotChocolate.AspNetCore" Version="12.7.0"/>
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.7.0"/>
+        <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5"/>
+        <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5"/>
+        <PackageReference Include="HotChocolate.Data" Version="12.7.0"/>
+        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.7.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Identity.Web" Version="1.23.1" />
+        <PackageReference Include="Microsoft.Identity.Web" Version="1.23.1"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\MundoBalloonApi.business\MundoBalloonApi.business.csproj" />
-        <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj" />
+        <ProjectReference Include="..\MundoBalloonApi.business\MundoBalloonApi.business.csproj"/>
+        <ProjectReference Include="..\MundoBalloonApi.infrastructure\MundoBalloonApi.infrastructure.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Common" />
+        <Folder Include="Common"/>
     </ItemGroup>
 
 </Project>
