Unit test are working, added rate limimiting

--- a/MundoBalloonApi.GraphQL/appsettings.json
+++ b/MundoBalloonApi.GraphQL/appsettings.json
@@ -26,6 +26,36 @@
       "AccountKey": "",
       "ImageContainer": "images",
       "ThumbnailContainer": "thumbnails"
+    },
+    "ClientRateLimiting": {
+      "EnableEndpointRateLimiting": false,
+      "StackBlockedRequests": false,
+      "ClientIdHeader": "X-MundoB-ClientId",
+      "HttpStatusCode": 429,
+      "EndpointWhitelist": [ "*:/api/status" ],
+      "ClientWhitelist": [ "dev.mundoballoon.com" ],
+      "GeneralRules": [
+        {
+          "Endpoint": "*",
+          "Period": "1s",
+          "Limit": 10
+        },
+        {
+          "Endpoint": "*",
+          "Period": "15m",
+          "Limit": 1000
+        },
+        {
+          "Endpoint": "*",
+          "Period": "12h",
+          "Limit": 10000
+        },
+        {
+          "Endpoint": "*",
+          "Period": "7d",
+          "Limit": 100000
+        }
+      ]
     }
   }
 }
