--- a/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
+++ b/MundoBalloonApi.GraphQL/MundoBalloonApi.GraphQL.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="AspNetCoreRateLimit.Redis" Version="1.0.1" />
         <PackageReference Include="AutoMapper" Version="11.0.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="1.0.0-beta.3" />
         <PackageReference Include="EasyCaching.Redis" Version="1.6.0" />
         <PackageReference Include="EasyCaching.Serialization.Json" Version="1.6.0" />
         <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="3.6.2" />
@@ -35,11 +36,15 @@
         <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
         <PackageReference Include="HotChocolate.Data" Version="12.12.0" />
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.12.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6">
+        <PackageReference Include="HotChocolate.Diagnostics" Version="12.12.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Identity.Web" Version="1.25.1" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.4" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.4" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.4" />
     </ItemGroup>
 
     <ItemGroup>
