Ran format on the project and implemented language header

--- a/MundoBalloonApi.GraphQL/appsettings.json
+++ b/MundoBalloonApi.GraphQL/appsettings.json
@@ -32,8 +32,12 @@
       "StackBlockedRequests": false,
       "ClientIdHeader": "X-MundoB-ClientId",
       "HttpStatusCode": 429,
-      "EndpointWhitelist": [ "*:/api/status" ],
-      "ClientWhitelist": [ "dev.mundoballoon.com" ],
+      "EndpointWhitelist": [
+        "*:/api/status"
+      ],
+      "ClientWhitelist": [
+        "dev.mundoballoon.com"
+      ],
       "GeneralRules": [
         {
           "Endpoint": "*",
