--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+
 jobs:
   build:
 
