Added Stripe sdk and initial payment intent

--- a/MundoBalloonApi.GraphQL/appsettings.json
+++ b/MundoBalloonApi.GraphQL/appsettings.json
@@ -27,6 +27,9 @@
       "ImageContainer": "images",
       "ThumbnailContainer": "thumbnails"
     },
+    "Stripe": {
+      "ApiKey": ""
+    },
     "ClientRateLimiting": {
       "EnableEndpointRateLimiting": false,
       "StackBlockedRequests": false,
